--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
 	<div class="container-full container-full-extend">
-		<img src="images\head.jpg" alt="background">  
+		<img src="images\head.jpg" class="img-fluid" alt="background">  
 			
 <!-- 		<div class="centered profile-container profile-title">Hi there, I'm Vinay </div>
 		<div class="centered centered-sub profile-container .profile-title">Web Developer </div> -->
