added col to have space

--- a/index.html
+++ b/index.html
@@ -23,10 +23,13 @@
 	<div class="container container-extended">
 		 
 		<div class="row">
+			<div class="col"></div>	
 		</div>
 		<div class="row">	
-				<p>Hi. I’m Vinay, a software developer from Karnataka, India.	  
-		     	I am passionate about building excellent software that improves the lives of those around me. I specialize in creating software for clients from domains like Insurance, Social media, and e-commerce.</p>
+				<div class="col">
+					<p>Hi. I’m Vinay, a software developer from Karnataka, India.	  
+			     	I am passionate about building excellent software that improves the lives of those around me. I specialize in creating software for clients from domains like Insurance, Social media, and e-commerce.</p>
+		     	</div>	
 		  
 		</div>
 
